...
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Passly</string>
    <string name="help_website"
        translatable="false">https://help.passbolt.com/</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="got_it">Got it</string>
    <string name="try_again">Try again</string>
    <string name="continue_label">Continue</string>
    <string name="copied_info">%s copied!</string>
    <string name="stop_scanning">Stop scanning</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="default_home_search_hint">Search name, user or url</string>
    <string name="all_items_home_search_hint">Search name, user, url or tag</string>
    <string name="user_search_hint">Search for users…</string>
    <string name="search_in_progress">Searching…</string>
    <string name="no_passwords">There are no passwords</string>
    <string name="no_otps">There are no TOTPs</string>
...
    <string name="resource_form_appearance_default_color">Default color</string>
    <string name="resource_form_appearance_default_icon">Default icon</string>
    <string name="resource_form_no_custom_fields_set">No custom fields set</string>
    <string name="resource_form_custom_fields_edit_not_supported">Edition of custom fields is currently not supported</string>

    <string name="settings_app_settings">App settings</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_terms_and_licenses">Terms &amp; licenses</string>
    <string name="settings_debug_logs">Debug, logs</string>
    <string name="settings_disable">Disable</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="settings_sign_out_server_error">Signed out on this device. The server session may still be active.</string>
    <string name="settings_title">Settings</string>
...

    <string name="settings_debug_logs_settings_logs">Access the logs</string>
    <string name="settings_debug_logs_enable_logs">Enable debug logs</string>
    <string name="settings_debug_logs_visit_help_website">Visit help website</string>

    <string name="settings_accounts_manage_accounts">Manage accounts</string>
    <string name="settings_accounts_transfer_account">Transfer account to another device</string>
    <string name="settings_accounts_key_inspector">Key inspector</string>
    <string name="settings_accounts_account_details">Account details</string>

    <string name="settings_terms_and_licenses_privacy_policy">Privacy policy</string>
    <string name="settings_terms_and_licenses_licenses">Open Source Licenses</string>
    <string name="settings_terms_and_licenses_terms">Terms &amp; Conditions</string>
...
    <string name="browser_first_login_processing">Confirming browser login...</string>
    <string name="browser_first_login_camera_error">Could not start the camera</string>
    <string name="browser_first_login_scan_error">Could not read this browser login QR code</string>
    <string name="browser_first_login_success">Browser extension authorized</string>
    <string name="browser_first_login_failure">Could not authorize browser extension</string>

    <string name="transfer_account_cancel_button">Cancel transfer</string>
    <string name="transfer_account_stop_button">Stop transfer</string>
    <string name="transfer_account_title">Transfer account details</string>
    <string name="transfer_account_stop_confirmation_dialog_message">If you leave, you will need to scan QR codes again.</string>
    <string name="transfer_account_could_not_initialize_parameters">Could not initialize transfer parameters</string>
    <string name="transfer_account_could_not_create_transfer_format">Could not create transfer. %s </string>
    <string name="transfer_account_could_not_initialize_qr_code_page_data">Could not initialize QR code page data</string>
    <string name="transfer_account_error_during_fetch_transfer_format">Could not fetch transfer details. %s</string>

    <string name="transfer_account_summary_success">Your information has been transferred!</string>
    <string name="transfer_account_summary_cancelled">Transfer cancelled</string>
    <string name="transfer_account_summary_go_back">Go back to my account</string>

    <string name="otp_search">Search TOTP</string>
    <string name="otp_hide_otp"
        translatable="false">••••••</string>
    <string name="otp_speed_dial_scan_qr">Scan QR code</string>
    <string name="otp_speed_dial_create_manually">Create TOTP manually</string>
...
