package net.svaroh.passly.testtags.composetags

object TransferAccount {
    const val SUMMARY_SCREEN = "TransferAccountSummaryScreen"
    const val QR_CODE = "TransferAccountQrCode"
    const val START_TRANSFER_BUTTON = "TransferAccountStartTransferButton"
}
